# watson-haskell-sdk

./: .gitignore  stack.yaml  watson-haskell-sdk.cabal
src/Watson/: NaturalLanguageClassifier.hs  RelationshipExtraction.hs
src/Watson/NaturalLanguageClassifier/: Types.hs
src/Watson/Util/: Multipart.hs
