name:                watson-haskell-sdk
version:             0.1.0.0
synopsis:            Haskell SDK to use IBM Watson services
description:         Please see README.md
homepage:            http://github.com/rainbyte/watson-haskell-sdk#readme
license:             GPL-3
license-file:        LICENSE
author:              Alvaro Fernando García
maintainer:          alvarofernandogarcia@gmail.com
copyright:           2016 Alvaro Fernando García
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Watson.NaturalLanguageClassifier
                     , Watson.RelationshipExtraction
  other-modules:       Watson.Util.Multipart
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , api-builder
                     , bytestring >= 0.10.6.0 && < 0.11
                     , http-client >= 0.4.27 && < 0.5
                     , http-types >= 0.9 && < 0.10
                     , lens
                     , servant >= 0.4.4.7 && < 0.8
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0 && < 0.5
                     , wreq
  default-language:    Haskell2010

test-suite watson-sdk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , watson-haskell-sdk
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/watson-haskell-sdk
